# artifacts/api-server/src/routes/index.ts
@@ -7,6 +7,7 @@ import visasRouter from "./visas";
 import visaCountriesRouter from "./visaCountries";
 import visaCustomFieldsRouter from "./visaCustomFields";
 import visaApplicationsRouter from "./visaApplications";
+import applicationDocumentsRouter from "./applicationDocuments";
 import storageRouter from "./storage";
 import bookingsRouter from "./bookings";
 import contactRouter from "./contact";
@@ -30,6 +31,7 @@ router.use(visaCountriesRouter);
 router.use(visaCustomFieldsRouter);
 router.use(visasRouter);
 router.use(visaApplicationsRouter);
+router.use(applicationDocumentsRouter);
 router.use(storageRouter);
 router.use(bookingsRouter);
 router.use(contactRouter);
